[gd_scene load_steps=55 format=2]

[ext_resource path="res://Assets/player/idle 00.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/player/attack 03.png" type="Texture" id=3]
[ext_resource path="res://Assets/player/crouch 01.png" type="Texture" id=4]
[ext_resource path="res://Assets/player/attack 00.png" type="Texture" id=5]
[ext_resource path="res://Assets/player/attack 04.png" type="Texture" id=6]
[ext_resource path="res://Assets/player/crouch-slash 02.png" type="Texture" id=7]
[ext_resource path="res://Assets/player/attack 02.png" type="Texture" id=8]
[ext_resource path="res://Assets/player/crouch-slash 01.png" type="Texture" id=9]
[ext_resource path="res://Assets/player/crouch 00.png" type="Texture" id=10]
[ext_resource path="res://Assets/player/crouch-slash 00.png" type="Texture" id=11]
[ext_resource path="res://Assets/player/idle 02.png" type="Texture" id=12]
[ext_resource path="res://Assets/player/hurt 00.png" type="Texture" id=13]
[ext_resource path="res://Assets/player/run 04.png" type="Texture" id=14]
[ext_resource path="res://Assets/player/jump-attack 02.png" type="Texture" id=15]
[ext_resource path="res://Assets/player/run 11.png" type="Texture" id=16]
[ext_resource path="res://Assets/player/run 05.png" type="Texture" id=17]
[ext_resource path="res://Assets/player/idle 01.png" type="Texture" id=18]
[ext_resource path="res://Assets/player/idle 03.png" type="Texture" id=19]
[ext_resource path="res://Assets/player/jump 00.png" type="Texture" id=20]
[ext_resource path="res://Assets/player/run 09.png" type="Texture" id=21]
[ext_resource path="res://Assets/player/jump 01.png" type="Texture" id=22]
[ext_resource path="res://Assets/player/attack 01.png" type="Texture" id=23]
[ext_resource path="res://Assets/player/jump 02.png" type="Texture" id=24]
[ext_resource path="res://Assets/player/jump 03.png" type="Texture" id=25]
[ext_resource path="res://Assets/player/run 03.png" type="Texture" id=26]
[ext_resource path="res://Assets/player/run 08.png" type="Texture" id=27]
[ext_resource path="res://Assets/player/hurt 01.png" type="Texture" id=28]
[ext_resource path="res://Assets/player/jump-attack 00.png" type="Texture" id=29]
[ext_resource path="res://Assets/player/jump-attack 01.png" type="Texture" id=30]
[ext_resource path="res://Assets/player/run 02.png" type="Texture" id=31]
[ext_resource path="res://Assets/player/run 00.png" type="Texture" id=32]
[ext_resource path="res://Assets/player/run 01.png" type="Texture" id=33]
[ext_resource path="res://Assets/player/run 06.png" type="Texture" id=34]
[ext_resource path="res://Assets/player/run 07.png" type="Texture" id=35]
[ext_resource path="res://Assets/player/run 10.png" type="Texture" id=36]
[ext_resource path="res://MeleeAttack.tscn" type="PackedScene" id=37]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=38]
[ext_resource path="res://Assets/fx/player-death7.png" type="Texture" id=39]
[ext_resource path="res://Assets/fx/player-death2.png" type="Texture" id=40]
[ext_resource path="res://Assets/fx/player-death3.png" type="Texture" id=41]
[ext_resource path="res://Assets/fx/player-death5.png" type="Texture" id=42]
[ext_resource path="res://Assets/fx/player-death4.png" type="Texture" id=43]
[ext_resource path="res://Assets/fx/player-death0.png" type="Texture" id=44]
[ext_resource path="res://Assets/fx/player-death6.png" type="Texture" id=45]
[ext_resource path="res://Assets/fx/player-death1.png" type="Texture" id=46]
[ext_resource path="res://whiten_material.tres" type="Material" id=47]
[ext_resource path="res://Blinker.tscn" type="PackedScene" id=48]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 28 ) ],
"loop": false,
"name": "hurt",
"speed": 3.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 44 ), ExtResource( 46 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 39 ), ExtResource( 39 ), ExtResource( 39 ), ExtResource( 39 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 23 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": false,
"name": "attack",
"speed": 9.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 4 ) ],
"loop": false,
"name": "crouch",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 27 ), ExtResource( 21 ), ExtResource( 36 ), ExtResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 24 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "crouch-slash",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 15 ) ],
"loop": false,
"name": "jump-attack",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 16.6781

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.2726, 7.87937 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.9936, 19.3705 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 17.4885, 7.00941 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 16.3738 )

[node name="Player" type="KinematicBody2D"]
z_index = 2
collision_mask = 12
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 47 )
position = Vector2( 0, -28 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16.8 )
shape = SubResource( 2 )

[node name="NormalAttack" parent="." groups=[
"PlayerAttack",
] instance=ExtResource( 37 )]
collision_layer = 16
damage = 3
knockback = 220

[node name="CollisionShape2D" parent="NormalAttack" index="0"]
position = Vector2( 26.5612, -21.734 )
shape = SubResource( 3 )

[node name="JumpAttack" parent="." groups=[
"PlayerAttack",
] instance=ExtResource( 37 )]
collision_layer = 16
damage = 2
knockback = 250

[node name="CollisionShape2D" parent="JumpAttack" index="0"]
position = Vector2( 24.1602, -35.0229 )
shape = SubResource( 4 )

[node name="CrouchAttack" parent="." groups=[
"PlayerAttack",
] instance=ExtResource( 37 )]
collision_layer = 16
damage = 3
knockback = 200

[node name="CollisionShape2D" parent="CrouchAttack" index="0"]
position = Vector2( 26.4077, -14.0466 )
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 18, -22 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 2000
limit_bottom = 610
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Hurtbox" parent="." instance=ExtResource( 38 )]
collision_mask = 32
whiten_material = ExtResource( 47 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -17.167 )
shape = SubResource( 6 )

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
max_distance = 5000.0

[node name="Blinker" parent="." instance=ExtResource( 48 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="NormalAttack"]

[editable path="JumpAttack"]

[editable path="CrouchAttack"]

[editable path="Hurtbox"]
